src/ai/ai.h
@@ -23,6 +23,7 @@ public:
     virtual Coord getMove() = 0;
     virtual void setShips() = 0;
     virtual void notify(Sea::Player player, const Coord& c, const HitInfo& hit) = 0;
+    Coord desperateMove() const;
 };
 
 #endif // AI__AI_H
