src/ai/smartai.cpp
@@ -300,10 +300,16 @@ Coord SmartAI::getMove()
     if (m_strategy.get() &&
         m_sea->turn() == m_player &&
         m_sea->status() == Sea::PLAYING) {
-        return m_strategy->getMove();
+        Coord move = m_strategy->getMove();
+        if ( move == Coord::invalid() ) {
+            return desperateMove();
+        }
+        else {
+            return move;
+        }
     }
     else {
-        return Coord::invalid();
+        return desperateMove();
     }
 }
 
